--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,7 +11,15 @@
 
     <p><%= campground.title %> - <%= campground.id %></p>
     <p><%= campground.location %></p>
+    <p><%= campground.description %></p>
     <a href="/campgrounds/<%= campground.id%>/edit">Edit this campground</a>
+    <form
+      action="/campgrounds/<%= campground.id %>?_method=DELETE"
+      method="POST"
+    >
+      <button>Delete this campground</button>
+    </form>
+
     <a href="/campgrounds">Return to all campgrounds</a>
   </body>
 </html>
