Add boilerplate and partials

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yelpcamp Campgrounds</title>
-  </head>
-  <body>
+<% layout('layouts/boilerplate') %>
+
     <h1>Show single campground</h1>
 
     <p><%= campground.title %> - <%= campground.id %></p>
@@ -21,5 +14,3 @@
     </form>
 
     <a href="/campgrounds">Return to all campgrounds</a>
-  </body>
-</html>
