--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yelpcamp Campgrounds</title>
-  </head>
-  <body>
+<% layout('layouts/boilerplate') %>
     <h1>All Campgrounds</h1>
     <a href="/campgrounds/new"><button>Create New Campground</button></a>
     <ul>
@@ -17,5 +9,3 @@
       </li>
       <% } %>
     </ul>
-  </body>
-</html>
