--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,54 +1,61 @@
 <% layout('layouts/boilerplate') %>
 
+
+<div class="row">
+  <!-- If we are creating a column of 6 and want something in the middle offset it by 3-->
+  <div class="col-6 offset-3">
     <h1>Edit Campground</h1>
-
+   
     <form action="/campgrounds/<%= campground.id %>?_method=PUT" method="POST">
-      <div>
-        <label for="title">Title</label>
-        <input
-          type="text"
-          id="title"
-          name="campground[title]"
-          value="<%= campground.title %>"
-        />
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>"/>
       </div>
 
-      <div>
-        <label for="price">Price</label>
-        <input
-          type="number"
-          id="price"
-          name="campground[price]"
-          value="10.00"
-          placeholder="10.00"
-          step=".01"
-          value="<%= campground.price %>"
-        />
+      <div class="mb-3">
+        <label class="form-label" for="image">Image</label>
+        <input class="form-control" type="text" id="image" name="campground[image]"  value="<%= campground.image %>"/>
       </div>
 
-      <div>
-        <label for="description">Description</label>
+      <div class="mb-3">
+        <label  class="form-label" for="price">Price</label>
+        <div class="input-group">
+          <span class="input-group-text" id="price-label">$</span>
+          <input type="text" class="form-control" id="price" placeholder="10.00" name="campground[price]" aria-label="Price" aria-describedby="price-label" value="<%= campground.price %>">
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label  class="form-label" for="description"></label>
         <textarea
+        class="form-control" 
           id="description"
           name="campground[description]"
           rows="20"
           cols="50"
-        >
-<%= campground.description %></textarea
-        >
+        ><%= campground.description %></textarea>
       </div>
 
-      <div>
-        <label for="location">Location</label>
-        <input
-          type="text"
-          id="location"
-          name="campground[location]"
-          value="<%= campground.location %>"
-        />
+      <div class="mb-3">
+        <label  class="form-label" for="location">Location</label>
+        <input class="form-control"  type="text" id="location" name="campground[location]" value="<%= campground.location %>" />
       </div>
+      <div class="mb-3">     
+        <button class='btn btn-success'>Update campground</button>
 
-      <button>Update campground</button>
+      </div>
+ 
     </form>
+      <a class="btn btn-primary" href="/campgrounds/<%= campground.id %>">Back to the campground</a>
+  </div>
 
-    <a href="/campgrounds/<% campground.id %>">Back to the campground</a>
+
+
+
+
+
+
+
+
+
+    
