--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,11 +1,35 @@
 <% layout('layouts/boilerplate') %>
+
+
+
     <h1>All Campgrounds</h1>
-    <a href="/campgrounds/new"><button>Create New Campground</button></a>
+
+    <a class=" btn btn-primary" href="/campgrounds/new">Create New Campground</a>
     <ul>
       <% for (let campground of campgrounds) { %>
-      <li>
-        <%= campground.title %> -
-        <a href="/campgrounds/<%= campground.id %>">See this campground</a>
-      </li>
+      
+        <div class="card">
+          <div class="row">
+            <div class="col-md-4">
+              <img class="img-fluid" alt="Campground Picture" src="<%= campground.image %>">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><%= campground.title %></h5>
+                <p class="card-text"><%= campground.description %></p>
+                <p class="card-text">
+                  <small class="text-muted"><%= campground.location %></small>
+                </p>
+                <a class="btn btn-primary" href="/campgrounds/<%= campground.id %>">View <%= campground.title %></a>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+ 
+        
+    
       <% } %>
     </ul>
