--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -6,22 +6,23 @@
   <div class="col-6 offset-3">
     <h1>New Campground</h1>
    
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds" method="POST" class="validateForm" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input class="form-control" type="text" id="title" name="campground[title]" />
+        <input class="form-control" type="text" id="title" name="campground[title]" required/>
+        <div class="valid-feedback">Complete</div>
       </div>
 
       <div class="mb-3">
         <label class="form-label" for="image">Image</label>
-        <input class="form-control" type="text" id="image" name="campground[image]" />
+        <input class="form-control" type="text" id="image" name="campground[image]" required/>
       </div>
 
       <div class="mb-3">
         <label  class="form-label" for="price">Price</label>
         <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
-          <input type="text" class="form-control" id="price" placeholder="10.00" name="campground[price]" aria-label="Price" aria-describedby="price-label">
+          <input type="text" class="form-control" id="price" placeholder="10.00" name="campground[price]" aria-label="Price" aria-describedby="price-label" required>
         </div>
       </div>
 
@@ -32,13 +33,13 @@
           id="description"
           name="campground[description]"
           rows="20"
-          cols="50"
+          required
         ></textarea>
       </div>
 
       <div class="mb-3">
         <label  class="form-label" for="location">Location</label>
-        <input class="form-control"  type="text" id="location" name="campground[location]" />
+        <input class="form-control"  type="text" id="location" name="campground[location]" required/>
       </div>
       <div class="mb-3">     
         <button class='btn btn-success'>Add campground</button>
@@ -50,5 +51,6 @@
 
 
 </div>
+
 
 
