--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yelpcamp</title>
-</head>
-<body>
-    <h1>Yelpcamp home page</h1>
-    
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+
+<div class="container">
+    <h1>Yelpcamp</h1>
+    <a href="/campgrounds">All campgrounds</a>
+</div>
