--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,10 +1,10 @@
 <% layout('layouts/boilerplate') %>
 
 
+<div class="container">
+  <h1>All Campgrounds</h1>
+</div>
 
-    <h1>All Campgrounds</h1>
-
-    <a class=" btn btn-primary" href="/campgrounds/new">Create New Campground</a>
     <ul>
       <% for (let campground of campgrounds) { %>
       
