--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -8,7 +8,7 @@
     <title>Boilerplate</title>
 </head>
 <body class="d-flex flex-column vh-100">
-
+ 
     <%- include("../partials/navbar")%>
     <main class="container">
     <!-- This is the insertion point -->
@@ -18,7 +18,7 @@
     <%- include("../partials/footer")%>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-    <script>
+    <!-- <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
       (function () {
           'use strict'
@@ -39,7 +39,7 @@
               }, false)
             })
         })()
-      </script>
+      </script> -->
 
 </body>
 </html>
