--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,8 +10,8 @@
 <body class="d-flex flex-column vh-100">
     <%- include("../partials/navbar")%>
     <!-- -----------------------------User Feedback -------------------------------- -->
-    <%= success %>
-    <%= error %>
+    <%- include("../partials/flashMessages") %>
+ 
 
 
 
